@@ -1,6 +1,7 @@
 package com.leo.user.controller.user;
 
 import com.leo.user.entity.user.User;
+import com.leo.user.mapper.user.UserMapper;
 import com.leo.user.model.user.UserDTO;
 import com.leo.user.service.user.UserService;
 import lombok.Setter;
@@ -10,17 +11,19 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+@Setter
 @RestController
-@RequestMapping("/api/users")
+@RequestMapping("/api/v1/users")
 public class UsersController {
     @Autowired
-    @Setter
     private UserService userService;
 
     @GetMapping("")
     public List<UserDTO> getUsers() {
         List<User> users = userService.getUsers();
-        return users.stream().map(u -> new UserDTO(u.getId(), u.getFirstname(), u.getLastname(), u.getEmail())).toList();
+
+        return users.stream().map(UserMapper.INSTANCE::toUserDTO).collect(Collectors.toList());
     }
 }
